updated to better reflect my accomplishments by junior year

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <!-- Side navigation -->
         <div class="sidenav">
             <a href="index.html">About Me</a>
-            <a href="artwork.html">Artwork</a>
-            <a href="pictures.html">Pictures</a>
+            <a href="projects.html">Projects</a>
+            <!-- <a href="artwork.html">Artwork</a>
+            <a href="pictures.html">Pictures</a> -->
             <a href="contact.html">Contact Me</a>
         </div>
 
@@ -22,7 +23,7 @@
                     Introduction
                 </h2>
                 <p>
-                    Meet Ife Malomo!
+                    Meet Ife Malomo
                 </p>
             </div>
 
@@ -33,18 +34,20 @@
                         <img src="Ife WaPo Photo.jpeg" alt="Ife standing in front of the Washington Post" style="width:400px">
                     </div>
                     <div class="column">
-                        <p>Hi, my name is Ife Malomo! I'm planning to get a major in Computer Science and 
-                            have been learning different coding languages, like Python, Matlab, and Java. 
-                            I love to create new things through art, and explore new mediums and 
-                            art styles. Outside of coding and drawing, I enjoy checking out new places like local
-                            state parks and fairs to make the most of what's in my immediate vicinity.</p>
+                        <p>Hello, my name is Ife Malomo. As a junior undergraduate at the University of Maryland 
+                            studying computer science on the data science track, I’ve become proficient in 
+                            object-oriented programming along with algorithms and data structures in my classes. 
+                            Using Python and Pandas, I’ve synthesized findings from querying databases and created 
+                            reports on them. I’m excited to learn more about the software development process and 
+                            create tools that can improve the lives of others.
+</p>
                     </div>
                 </div>
             </div>
 
             <div class="section">
                 <h2>To See My Education and Work Experience</h2>
-                <p>Check out my <a href="Ifeoluwa Malomo Resume.pdf" >resume</a>!</p>
+                <p>Check out my resume <a href="Ifeoluwa Malomo CS Resume.pdf" >here</a>.</p>
             </div>
         </div>
     </body>
