--- a/contact.html
+++ b/contact.html
@@ -11,34 +11,35 @@
         <!-- Side navigation -->
         <div class="sidenav">
             <a href="index.html">About Me</a>
-            <a href="artwork.html">Artwork</a>
-            <a href="pictures.html">Pictures</a>
+            <!-- <a href="artwork.html">Artwork</a>
+            <a href="pictures.html">Pictures</a> -->
+            <a href="projects.html">Projects</a>
             <a href="contact.html">Contact Me</a>
         </div>
 
         <div id="container">
             <div class= "section">
                 <h2 class="highlight-blue">
-                    Contact me here!
+                    Contact me here:
                 </h2>
                 <p>
-                    <a href="mailto:ifeoluwamalomo@gmail.com" >IfeoluwaMalomo@gmail.com</a>
-                    <!-- New Section: "Be my friend on" hyperlink icons for insta, linkedin, and duolingo (lol) -->
+                    <a href="malomoife@gmail.com" >MalomoIfe@gmail.com</a>
+                    <!-- New Section: "Be my friend on" hyperlink icons for linkedin, handshake, github, etc. -->
                 </p>
             </div>
             <div class="section">
-                <h2>Be My Friend!</h2>
+                <h2>Connect With Me</h2>
                 <div class="row">
                     <div class="column">
                         <a href="https://www.linkedin.com/in/ifeoluwa-malomo-648045222">
                             <img src="https://cdn-icons-png.flaticon.com/512/49/49656.png" alt="Linkedin Logo" style="width:100px;height:100px;">
                         </a> 
                     </div>
-                    <div class="column">
+                    <!--<div class="column">
                         <a href="https://www.duolingo.com/profile/Ife438717">
                             <img src="https://yt3.ggpht.com/-G4jy-RODjaY/AAAAAAAAAAI/AAAAAAAAAAA/PdjmHKhtfeU/s900-c-k-no/photo.jpg" alt="Duolingo Logo" style="width:100px;height:100px;">
                         </a>                       
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
