added personal statement and images to explanation of k-means application

--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
         <div id="container">
             <div class= "section">
                 <h2 class="highlight-blue">
-                    Introduction
+                    Ife Malomo
                 </h2>
-                <p>
-                    Meet Ife Malomo
-                </p>
             </div>
 
             <div class= "section">
@@ -36,7 +33,7 @@
                     <div class="column">
                         <p>Hello, my name is Ife Malomo. As a junior undergraduate at the University of Maryland 
                             studying computer science on the data science track, I’ve become proficient in 
-                            object-oriented programming along with algorithms and data structures in my classes. 
+                            object-oriented programming along with algorithms and data structures. 
                             Using Python and Pandas, I’ve synthesized findings from querying databases and created 
                             reports on them. I’m excited to learn more about the software development process and 
                             create tools that can improve the lives of others.
@@ -44,9 +41,29 @@
                     </div>
                 </div>
             </div>
-
             <div class="section">
-                <h2>To See My Education and Work Experience</h2>
+                <h2>Personal Statement</h2>
+                <p>I started learning to program when I joined the Johns Hopkins University STEM Academy. There, I learned the 
+                    basics of Python and MATLAB as well as the beginnings of Social Network Analysis. Both intrigued me; solving 
+                    problems in Python felt like figuring out a puzzle, and it amazed me how something as complex as a community
+                     could be condensed and analyzed with just mathematical algorithms. I joined Johns Hopkins’ internship 
+                     program, and got to talk with professionals in the computer science field, which encouraged me to pursue a 
+                     career in computer science myself.<br><br>As I entered college, I continued searching for opportunities to 
+                     explore the different aspects of computer science. I took particular interest in data science, from that 
+                     formative STEM Academy class. I interned with STEER Tech, a company creating autonomous vehicles capable of 
+                     recognizing obstacles from sensors, and interviewed my colleagues to understand the science behind it, and 
+                     how the principles I learned in my classes related. Since then, I’ve taken Introduction to Data Science and 
+                     Introduction to Machine Learning, so I could better conceptualize the calculations the cars’ autonomous 
+                     systems were making and implement similar algorithms.<br><br>Beyond data science, I’ve strived to explore many 
+                     different avenues of computer science. In my first internship with Johns Hopkins, I worked on front-end app 
+                     development with my mentor, using Python and the PyQt5 library. I expanded my breadth of knowledge in my 
+                     Technica fellowship before my freshman year of college, learning HTML and CSS for front-end web development 
+                     and creating this website as my capstone. Then, as a fellow in the IBM accelerate program, I familiarized 
+                     myself with back-end web development using JavaScript. I’m still exploring different possibilities of a 
+                     career in computer science, and picking up knowledge of many different sectors as I go.</p>
+            </div>
+            <div class="section">
+                <h2>My Education and Work Experience</h2>
                 <p>Check out my resume <a href="Ifeoluwa Malomo CS Resume.pdf" >here</a>.</p>
             </div>
         </div>
