--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                     Projects
                 </h2>
                 <p>
-                    Some of my projects covering proficiencies in Python, programming languages, machine learning algorithms, and data analysis.
+                    Some of my projects covering Python, programming languages, machine learning algorithms, and data analysis.
                 </p>
             </div>
             <div class="section">
@@ -36,17 +36,27 @@
             <div class="section">
                 <h2>Graph Creation in Python Instruction Set</h2>
                 <a href="Graph Instructions.pdf" >View Project</a>
-                <p>Through my Introduction to Data Science class, I became familiar the Python library Matplotlib with the functions necessary to 
-                    create visually appealing graphs to more effectively argue for the story the data was telling. I thought
-                    students taking the class today would find a lot of value in instructions on this, since it isn't explicitly taught in the course.  
+                <p>Through my Introduction to Data Science class, I became familiar with the Python library, Matplotlib. 
+                    I could use its functions to create visually appealing graphs to more effectively argue for the story the data was telling. Students taking 
+                    the class today would find a lot of value in instructions on this, since it isn't explicitly taught in the course. This lead me to create 
+                    instructions on how to use the Matplotlib library for this purpose.
                 </p>
             </div>
             <div class="section">
                 <h2>K-Means Clustering for Image Compression</h2>
                 <a href="https://colab.research.google.com/drive/1trih--cDMmUxrXQx41RfxDr0rnULsYgU?usp=sharing" >View Project</a>
                 <p>In my Introduction to Machine Learning class, I learned about how various machine learning algorithms can be implemented through code. I 
-                    put this into practive in using Python to classify different colors into a set number of distinct
+                    put this into practice in using Python to classify different colors into a set number of distinct
                     representative colors that can reduce the amount of data it takes to store a picture.</p>
+                <div class="row">
+                    <div class="column">
+                        <img src="fruits_small.jpg" style="width:50%">
+                    </div>
+                    <div class="column">
+                        <img src="k_means_fruits_small.png" style="width:50%">
+                    </div>
+                </div> 
+                <p>On the left is the original image, which has been compressed to only 16 colors on the right using K-Means.</p>
             </div>
         </div>
     </body>
